--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="This page is part of a Buzzvel test application" />
   <title>Buzzvel Project</title>
   <link href="./src/output.css" rel="stylesheet">
+  <link rel="preload" href="/assets/guy-working.webp" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
